# TrueAI

./: .env.example  .gitignore  AGENTS.md  AGENT_RUNTIME.md  ANDROID_BUILD_GUIDE.md  ANDROID_IMPLEMENTATION.md  ANDROID_MOBILE_OPTIMIZATIONS.md  APK_BUILD_GUIDE.md  APP_BUILDER.md  BUILD_VERIFICATION.md  BUNDLE_AUTOMATION.md  CHANGELOG.md  COMPETITIVE_SUMMARY.md  DYNAMIC_UI_IMPLEMENTATION.md  EMPTY_STATE_INTEGRATION.md  EMPTY_STATE_INTEGRATION_SUMMARY.md  ENHANCEMENTS_COMPLETE.md  ERROR_BOUNDARIES.md  FEATURES.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INDEXEDDB_CACHE.md  ISSUES_FIXED.md  MOBILE_OPTIMIZATION_COMPLETE.md  MOBILE_PERFORMANCE_OPTIMIZATION.md  OFFLINELLM_PARITY_PLAN.md  OPTIMIZATION_GUIDE.md  PERFORMANCE_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PHASE7_COMPLETE.md  PHASE8_COMPLETE.md  PHASE9_COMPLETE.md  PRD.md  (+22 more)
.agent/: index.json
.bolt/: mcp.json
.github/: CODEOWNERS  actionlint.yaml  copilot-instructions.md
Admin-Virtual-team-enhanced/: package.json
admin-virtual-team-enhanced/: eslint.config.js  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
android/: build.gradle  settings.gradle  variables.gradle
android/capacitor-llama/src/main/cpp/: CMakeLists.txt  THIRD_PARTY_NOTICES.md  llama_jni.cpp
app/: _layout.tsx
docs/: ADMIN_SECURITY_AGENT.md  AGENT_CAPABILITIES.md  AGENT_DASHBOARD.md  AGENT_MCP_CLIENT.md  AGENT_MCP_SERVER.md  AGENT_METRICS.md  AGENT_OPERATIONS.md  AGENT_TOOLS.md  COVERAGE_ROADMAP.md
hooks/: useFrameworkReady.test.ts
lib/: advanced-agent-workflow.ts  advanced-memory.ts  agent-collaboration.ts  agent-scheduler.ts  agent-visualization.ts  agent.test.ts  agent.ts  analytics.ts  android.test.ts  android.ts  conversation-insights.ts  conversation-management.ts  document-parser.ts  embeddings.ts  harness.test.ts  harness.ts  huggingface.ts  inference.test.ts  inference.ts  model-comparison.ts  multi-model-ensemble.ts  notifications.ts  rag.ts  realtime.ts  store.test.ts  store.ts  supabase.ts  text-chunker.ts  theme.ts  voice-conversation.ts  voice-input.ts  voice-output.ts
scripts/: admin-security-review.mjs  agent-metrics.mjs  agent-replay.mjs  build-agent-index.mjs  check-agent-frontmatter.mjs  check-agent-permissions.mjs  check-instructions-drift.mjs  gen-tool-docs.mjs  (+14 more)
(+411 files in other folders)
